# panel

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  compose.yml  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
backend/: Cargo.toml  Dockerfile.dev  build.rs
backend/src/: cache.rs  captcha.rs  database.rs  deserialize.rs  env.rs  extract.rs  jwt.rs  lib.rs  mail.rs  main.rs  permissions.rs  response.rs  s3.rs  settings.rs  storage.rs  utils.rs
backend/src/commands/: diagnostics.rs  import.rs  mod.rs  service_install.rs  version.rs
backend/src/commands/extensions/: add.rs  apply.rs  export.rs  inspect.rs  list.rs  mod.rs  remove.rs  update.rs
backend/src/extensions/: list.rs  manager.rs  mod.rs
backend/src/models/: admin_activity.rs  database_host.rs  location.rs  location_database_host.rs  mod.rs  mount.rs  nest.rs  nest_egg.rs  nest_egg_mount.rs  nest_egg_variable.rs  node.rs  node_allocation.rs  node_mount.rs  role.rs  server.rs  server_activity.rs  server_allocation.rs  server_backup.rs  server_database.rs  server_mount.rs  server_schedule.rs  server_schedule_step.rs  server_subuser.rs  server_variable.rs  user.rs  user_activity.rs  user_api_key.rs  user_password_reset.rs  user_recovery_code.rs  user_security_key.rs  user_session.rs  user_ssh_key.rs
backend/src/routes/: mod.rs
backend/src/routes/api/: languages.rs  mod.rs  settings.rs
backend/src/routes/api/admin/: activity.rs  extensions.rs  mod.rs  settings.rs  telemetry.rs
backend/src/routes/api/admin/backup_configurations/: mod.rs
backend/src/routes/api/admin/backup_configurations/_backup_configuration_/: backups.rs  locations.rs  mod.rs  nodes.rs  servers.rs  stats.rs
backend/src/routes/api/admin/database_hosts/: mod.rs
backend/src/routes/api/admin/database_hosts/_database_host_/: databases.rs  mod.rs  test.rs
backend/src/routes/api/admin/egg_repositories/: mod.rs
backend/src/routes/api/admin/egg_repositories/_egg_repository_/: mod.rs  sync.rs
backend/src/routes/api/admin/locations/: mod.rs
backend/src/routes/api/admin/locations/_location_/: mod.rs  nodes.rs
backend/src/routes/api/admin/mounts/: _mount_.rs  mod.rs
backend/src/routes/api/admin/mounts/_mount_/: mod.rs  nest_eggs.rs  nodes.rs  servers.rs
backend/src/routes/api/admin/nests/: mod.rs
backend/src/routes/api/admin/nests/_nest_/: mod.rs
backend/src/routes/api/admin/nodes/: _node_.rs  mod.rs
backend/src/routes/api/admin/nodes/_node_/: allocations.rs  mod.rs  reset_token.rs  servers.rs
backend/src/routes/api/admin/oauth_providers/: mod.rs
backend/src/routes/api/admin/oauth_providers/_oauth_provider_/: mod.rs  users.rs
backend/src/routes/api/admin/roles/: mod.rs
backend/src/routes/api/admin/roles/_role_/: mod.rs  users.rs
backend/src/routes/api/admin/servers/: mod.rs
backend/src/routes/api/admin/servers/_server_/: clear_state.rs  mod.rs  transfer.rs  variables.rs
backend/src/routes/api/admin/stats/: backups.rs  general.rs  mod.rs
backend/src/routes/api/admin/users/: mod.rs
backend/src/routes/api/admin/users/_user_/: activity.rs  mod.rs  servers.rs  two_factor.rs
backend/src/routes/api/auth/: mod.rs  register.rs
backend/src/routes/api/auth/login/: checkpoint.rs  mod.rs  security_key.rs
backend/src/routes/api/auth/oauth/: _oauth_provider_.rs  mod.rs
backend/src/routes/api/auth/oauth/redirect/: _oauth_provider_.rs  mod.rs
backend/src/routes/api/auth/password/: forgot.rs  reset.rs
backend/src/routes/api/auth/register/: mod.rs
backend/src/routes/api/client/: mod.rs  permissions.rs
backend/src/routes/api/client/account/: activity.rs  avatar.rs  email.rs  logout.rs  mod.rs  password.rs  two_factor.rs
backend/src/routes/api/client/account/api_keys/: _api_key_.rs  _apikey_.rs  mod.rs
backend/src/routes/api/client/account/oauth_links/: _oauth_link_.rs  mod.rs
backend/src/routes/api/client/account/security_keys/: _security_key_.rs  challenge.rs  mod.rs
backend/src/routes/api/client/account/sessions/: _session_.rs  mod.rs
backend/src/routes/api/client/account/ssh_keys/: _ssh_key_.rs  _sshkey_.rs  import.rs  mod.rs
backend/src/routes/api/client/servers/: mod.rs
backend/src/routes/api/client/servers/_server_/: activity.rs  command.rs  mod.rs  power.rs  resources.rs  websocket.rs
backend/src/routes/api/client/servers/groups/: _server_group_.rs  mod.rs  order.rs
backend/src/routes/api/remote/: activity.rs  mod.rs  schedule.rs
backend/src/routes/api/remote/backups/: mod.rs
backend/src/routes/api/remote/servers/: mod.rs  reset.rs
backend/src/routes/api/remote/sftp/: auth.rs  mod.rs
backend/static/: api.html
backend/static/mails/: account_created.html  password_reset.html
rule-validator/: Cargo.toml
rule-validator/src/: lib.rs  rules.rs
shared/: Cargo.toml
shared/src/: cache.rs  captcha.rs  database.rs  deserialize.rs  env.rs  extract.rs  lib.rs  mail.rs  permissions.rs  prelude.rs  response.rs  settings.rs  storage.rs  telemetry.rs
shared/src/cap/: mod.rs  utils.rs
shared/src/extensions/: background_tasks.rs  commands.rs  distr.rs  manager.rs  mod.rs
shared/src/models/: admin_activity.rs  backup_configurations.rs  database_host.rs  egg_repository.rs  egg_repository_egg.rs  location.rs  location_database_host.rs  mod.rs  mount.rs  nest.rs  nest_egg.rs  nest_egg_mount.rs  nest_egg_variable.rs  node.rs  node_allocation.rs  node_mount.rs  oauth_provider.rs  role.rs  server.rs  server_activity.rs  server_allocation.rs  server_backup.rs  server_database.rs  server_mount.rs  server_schedule.rs  server_schedule_step.rs  server_subuser.rs  server_variable.rs  user.rs  user_activity.rs  user_api_key.rs  user_oauth_link.rs  user_password_reset.rs  user_recovery_code.rs  user_security_key.rs  user_server_group.rs  user_session.rs  user_ssh_key.rs
wings-api/: .gitignore  Cargo.toml  openapi.json  package.json  pnpm-lock.yaml
wings-api/generator-src/: generate-schema-object.ts  generate-schema-property.ts  index.ts
wings-api/src/: client.rs  extra.rs  lib.rs
(+1414 files in other folders)
