[workspace]
resolver = "3"
members = ["backend", "rule-validator", "wings-api", "shared", "extensions/*"]
default-members = ["backend"]
package.version = "0.12.3"
package.edition = "2024"

[workspace.dependencies]
wings-api = { path = "wings-api" }
rule-validator = { path = "rule-validator" }
shared = { path = "shared" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
sentry = { version = "0.45.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
sentry-tower = { version = "0.45.0", default-features = false, features = ["http", "axum-matched-path"] }
sentry-anyhow = "0.45.0"
axum = "0.8.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "mysql", "chrono", "ipnetwork", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
async-trait = "0.1.89"
axum-extra = { version = "0.10.1", features = ["query"] }
anyhow = "1.0.98"
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono", "indexmap", "uuid", "rc_schema"] }
utoipa-axum = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
indexmap = { version = "2.7.1", features = ["serde"] }
regex = "1.11.1"
urlencoding = "2.1.3"
cron = { version = "0.15.0", features = ["serde"] }
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
sha2 = "0.10.8"
colored = "3.0.0"
russh = "0.54.0"
futures-util = "0.3.31"
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
rand = "0.9.0"
rustis = "0.16.1"
dotenvy = "0.15.7"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = "symbols"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
