[package]
name = "panel-rs"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { path = "../wings-api" }
rule-validator = { path = "../rule-validator" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
sentry = { version = "0.42.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
sentry-tower = { version = "0.42.0", default-features = false, features = ["http", "axum-matched-path"] }
sentry-anyhow = "0.42.0"
axum = "0.8.1"
colored = "3.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "mysql", "chrono", "ipnetwork", "uuid"] }
dotenvy = "0.15.7"
rustis = "0.16.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { workspace = true }
utoipa-axum = "0.2.0"
chrono = { workspace = true }
indexmap = { workspace = true }
tower-http = { version = "0.6.2", features = ["normalize-path"] }
reqwest = { workspace = true }
sha2 = "0.10.8"
rand = "0.9.0"
image = "0.25.5"
tower-cookies = "0.11.0"
rust-s3 = { version = "0.35.1", default-features = false, features = ["tokio-rustls-tls"] }
futures-util = "0.3.31"
jwt = "0.16.0"
hmac = { version = "0.12.1", features = ["std"] }
tower = "0.5.2"
include_dir = "0.7.4"
simple_crypt = "0.2.3"
uuid = { workspace = true }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
validator = { workspace = true }
regex = { workspace = true }
russh = "0.54.0"
urlencoding = { workspace = true }
lettre = { version = "0.11.17", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }
base32 = "0.5.1"
constant_time_eq = "0.4.2"
ignore = { version = "0.4.23", features = ["simd-accel"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
infer = "0.19.0"
axum-extra = { version = "0.10.1", features = ["query"] }
anyhow = "1.0.98"
clap = "4.5.37"
dialoguer = "0.11.0"
cron = { workspace = true }
webauthn-rs = "0.5.2"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.0"
