[package]
name = "panel-rs"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { path = "../wings-api" }
rule-validator = { path = "../rule-validator" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
sentry-anyhow = { workspace = true }
axum = { workspace = true }
colored = "3.0.0"
sqlx = { workspace = true }
dotenvy = "0.15.7"
rustis = { version = "0.16.1", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
tower-http = { version = "0.6.2", features = ["normalize-path"] }
reqwest = { workspace = true }
sha2 = "0.10.8"
rand = "0.9.0"
image = "0.25.5"
tower-cookies = "0.11.0"
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
futures-util = "0.3.31"
jwt = "0.16.0"
hmac = { version = "0.12.1", features = ["std"] }
tower = "0.5.2"
include_dir = "0.7.4"
simple_crypt = "0.2.3"
uuid = { workspace = true }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
validator = { workspace = true }
regex = { workspace = true }
russh = "0.54.0"
urlencoding = { workspace = true }
lettre = { version = "0.11.17", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }
base32 = "0.5.1"
constant_time_eq = "0.4.2"
ignore = { version = "0.4.23", features = ["simd-accel"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
infer = "0.19.0"
axum-extra = { workspace = true }
anyhow = { workspace = true }
clap = "4.5.37"
dialoguer = "0.12.0"
cron = { workspace = true }
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
openssl = { version = "0.10.73", features = ["vendored"] }
base64 = "0.22.1"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.0"
