[package]
name = "panel-rs"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { workspace = true }
rule-validator = { workspace = true }
shared = { workspace = true }
extension-internal-list = { path = "../backend-extensions/internal-list" }
tracing = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
axum = { workspace = true }
colored = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
tower-http = { version = "0.6.2", features = ["normalize-path"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
image = "0.25.5"
tower-cookies = "0.11.0"
rand = { workspace = true }
futures-util = { workspace = true }
tower = "0.5.2"
include_dir = { workspace = true }
uuid = { workspace = true }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
validator = { workspace = true }
russh = { workspace = true }
urlencoding = { workspace = true }
chrono-tz = { version = "0.10.4", features = ["serde"] }
infer = "0.19.0"
axum-extra = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = "0.12.0"
cron = { workspace = true }
webauthn-rs = { workspace = true }
openssl = { version = "0.10.73", features = ["vendored"] }
base64 = "0.22.1"
rust-s3 = { workspace = true }
rustis = { workspace = true }
dotenvy = { workspace = true }
oauth2 = { workspace = true }
human_bytes = "0.4.3"
which = "8.0.0"
semver = { workspace = true }
compact_str = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.0"

[build-dependencies]
serde = { workspace = true }
toml = "0.9.7"
semver = { workspace = true }
