[package]
name = "rule-validator"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
validator = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
compact_str = { workspace = true }
