[package]
name = "wings-api"
version = "1.0.0"
edition = "2024"

[dependencies]
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
urlencoding = { workspace = true }
nestify = "0.3.3"
