[package]
name = "wings-api"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
urlencoding = { workspace = true }
cron = { workspace = true }
nestify = "0.3.3"
