[package]
name = "wings-api"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
urlencoding = { workspace = true }
anyhow = { workspace = true }
cron = { workspace = true }
regex = { workspace = true }
serde_regex = { workspace = true }
compact_str = { workspace = true }
nestify = "0.3.3"
